# uartxmodem

./: .gitignore  CMakeLists.txt  README.md  createVirtualSerialPorts.sh  inputFile.txt
include/: ITransmission.h  IXModem.h  TransmissionPrintOut.h  TransmissionUart.h  XModem.h  XModemDefinitions.h  XModemReceiver.h  XModemSender.h
src/: Receiver.cpp  Sender.cpp  TransmissionPrintOut.cpp  TransmissionUart.cpp  XModem.cpp  XModemReceiver.cpp  XModemSender.cpp
tests/: MockTransmission.h  TransmissionTest.cpp  UartXModemTest.cpp
